--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.UPT-BinaryGame"
     },
     "android": {
       "adaptiveIcon": {
